# betterdfm

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  cors.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  go.mod  go.sum
apps/web/: Dockerfile  package.json  tailwind.config.ts
engine/dfm-engine/: dedup.go  dedup_test.go  determinism_test.go  fix_hint_test.go  fixture_test.go  freespace.go  freespace_test.go  geom.go  geom_test.go  go.mod  messages.go  messages_test.go  rule_annular_ring.go  rule_annular_ring_test.go  rule_aspect_ratio.go  rule_aspect_ratio_test.go  rule_clearance.go  rule_clearance_test.go  rule_component_height.go  (+30 more)
scripts/: set-log-retention.sh
sidecar/gerbonara/: Dockerfile  debug_vias.py  main.py  models.py  parse_boards.py  parser_gerber.py  parser_odb.py  pyproject.toml  storage.py  taskdef.json  units.py
sidecar/gerbonara/tests/: conftest.py  test_arc_segments.py  test_archive_discovery.py  test_coord_units.py  test_feature_parsing.py  test_polygon_net_inference.py  test_profile_parsing.py  test_refdes_side_lookup.py  test_sym_parsing.py
sidecar/gerbonara/tests/fixtures/: copper_via_catchpad.txt  copper_via_catchpad_inner.txt  custom_symbol_features.txt  drill_hole_round_p.txt  drill_padstack_id.txt  features_inch.txt  features_inch_drill.txt  features_l_record_sym_dcode.txt  features_mm.txt  profile_with_arc.txt  profile_with_hole.txt  surface_polygon.txt  sym_table_inch.txt  sym_table_mm.txt
(+97 files in other folders)
