[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betterdfm-gerbonara"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "gerbonara>=1.1.0",
    "boto3>=1.34.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
